--- a/css/style.css
+++ b/css/style.css
@@ -4,29 +4,135 @@
     box-sizing: border-box;
 }
 
-.container {
-    width: 80%;
-    margin: 0px auto;
+section {
+    background: linear-gradient(rgba(255,255,255, 0.5), rgba(255,255,255, 0.5)), url(../img/bg.jpg) center no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
 
-.card-flex {
-    padding: 90px 0;
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.card {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.card {
-    background: linear-gradient(45deg, #ffaf00, #bb02ff);
+.card-body {
+    margin: 14px 0;
+    width: 38%;
+    min-height: 90vh;
+    position: relative;
+    perspective: 800px;
+}
+
+.left-side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: red;
     width: 50%;
-    min-height: 60vh;
+    height: 100%;
+    transform: rotateY(0deg);
+    transform-origin: left;
+    transition: transform 2s;
+    background: linear-gradient(rgba(255,255,255, 0.2), rgba(255,255,255, 0.2)), url(../img/card-cover.jpg) repeat;
+    background-size: contain;
+    background-position-x: left;
+    border-radius: 18px 0 0 18px;
+}
+
+.right-side {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: blue;
+    width: 50%;
+    height: 100%;
+    transform: rotateY(0deg);
+    transform-origin: right;
+    transition: transform 2s;
+    background: linear-gradient(rgba(255,255,255, 0.2), rgba(255,255,255, 0.2)), url(../img/card-cover.jpg) repeat;
+    background-size: contain;
+    background-position-x: right;
+    border-radius: 0 18px 18px 0;
+}
+
+.back-side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transform: translateZ(-500px);
+    transition: transform 1s;
+}
+
+.card:hover .card-body:hover .left-side {
+    transform: rotateY(-360deg);
+    border-radius: 18px;
+}
+.card:hover .card-body:hover .right-side {
+    transform: rotateY(360deg);
+    border-radius: 18px;
+}
+
+.card:hover .card-body:hover .back-side {
+    transform: translateZ(0);
+    position: static;
+    z-index: 1;
+}
+
+h1 {
+    background-color: #1560bd;
+    border-radius: 18px 18px 0 0;
+    padding: 15px;
+}
+
+p{
+    text-align: center;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.team-members {
+    padding: 10px 30px 10px 30px;
+    background-color: #fafafa;
+    border-radius: 0 0 18px 18px;
+}
+
+.row {
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    box-shadow: 0px 5px 90px 0px rgba(65, 57, 57, 0.05);
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .card-content {
+    background-color: #d1dcf3;
+    width: 30%;
+    border-radius: 7px;
+    box-shadow: 4px 4px 4px 4px rgba(210, 221, 243, 0.4);
+}
+
+.card-content img {
+    width: 100%;
+    border-radius: 7px 7px 0 0;
+}
+
+.team-lead {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.card-text {
     text-align: center;
-    line-height: 2;
 }
