--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,8 @@ section {
 }
 
 
+/* MEDIA QUERIES */
+/* SMALLER DESKTOP VIEW */
 @media(max-width: 1025px) {
     h1 {
         font-size: 22px;
@@ -127,6 +129,7 @@ section {
     }
 }
 
+/* TABLET VIEW */
 @media(max-width: 769px) {
     h1 {
         font-size: 20px;
@@ -160,6 +163,7 @@ section {
     }
 }
 
+/* MOBILE VIEW */
 @media(max-width: 426px) {
     h1 {
         font-size: 16px;
